added sophie's work as well

--- a/18_css/0_inline/index.html
+++ b/18_css/0_inline/index.html
@@ -23,14 +23,15 @@
     </ul>
     <h2 style="
     position: relative; 
-    left: 500px; 
+    left: 200px; 
     bottom: 125px;
+    max-width: 60ch;
     ">
       main foo heading
     </h2>
     <p style="
     position: relative; 
-    left: 500px; 
+    left: 200px; 
     bottom: 125px;
     max-width: 85ch;
     ">
@@ -43,8 +44,8 @@
       turducken tri-tip chislic tail.
     </p>
 
-      <br>
-      <br>
+      <br style = "width = 1px">
+      <br style = "width = 1px">
 
       <p style="text-align: right; background-color:#585454; padding:10px; color: grey;">
         Copyright &copy; 2021 Clyde "Thluffy" Sinclair
